--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/backend/node_modules
+/backend/package-lock.json
+/backend/yarn.lock
+/backend/build
 /node_modules
 /.pnp
 .pnp.js
